<resources>
    <string name="app_name">Школьный дневник</string>
    <string name="action_settings">Настройки</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_login">Логин</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_out">Выйти</string>

    <string name="nav_profile">Профиль</string>
    <string name="nav_timetable">Расписание</string>
    <string name="nav_marks">Текущие оценки</string>
    <string name="nav_progress">Итоговые оценки</string>
    <string name="nav_homework">Домашние задания</string>
    <string name="nav_statistics">Статистика</string>
    <string name="nav_messages">Сообщения</string>
    <string name="nav_news">Новости</string>

    <string name="today">Сегодня</string>

    <!--<string name="base_url">http://schooldiary.azurewebsites.net/</string>-->
    <string name="base_url">http://192.168.0.19:8888/schooldiaryapi/</string>
    <string name="call_method_api_login">auth/login/</string>
    <string name="call_method_api_get_timetable">timetable/get/</string>
    <string name="call_method_api_get_lesson">lesson/get/</string>
    <string name="call_method_api_get_progress">progress/get/</string>
    <string name="call_method_api_get_subject_marks">subject/getmarks/</string>
    <string name="call_method_api_get_homework">lesson/gethomework/</string>
    <string name="call_method_api_get_statistics">subject/statistics/</string>
    <string name="call_method_push_register">gcm/register/</string>
    <string name="call_method_push_unregister">gcm/unregister/</string>
    <string name="call_method_api_create_message">message/create/</string>
    <string name="call_method_api_get_messages">message/getall/</string>
    <string name="call_method_api_get_chat_messages">message/get/</string>
    <string name="call_method_api_read_chat">message/read/</string>
    <string name="call_method_api_get_news">news/get/</string>


    <string name="error_encode">Ошибка кодирования данных</string>
    <string name="error_response">Ошибка получения данных</string>

    <string name="error_field_required">Обязательное поле</string>


    <string name="id">Ид</string>
    <string name="class_id">КлассИд</string>
    <string name="fio">ФИО</string>
    <string name="name">Наименование</string>
    <string name="class_name">КлассНаименование</string>
    <string name="class_text">Класс</string>
    <string name="teacher_id">УчительИд</string>
    <string name="message_type">ТипСообщения</string>
    <string name="message_read">Прочтено</string>
    <string name="name_short">Имя</string>

    <string name="result">result</string>
    <string name="time">Время</string>
    <string name="periods">Периоды</string>
    <string name="time_id">ВремяИд</string>
    <string name="subjects">Предметы</string>
    <string name="teachers">Учителя</string>
    <string name="subject_id">ПредметИд</string>
    <string name="room_name">КабинетНаименование</string>
    <string name="timetable">Расписание</string>
    <string name="progress_marks">ИтоговыеОценки</string>
    <string name="timetable_id">РасписаниеИд</string>

    <string name="time_start">ВремяНачала</string>
    <string name="day_id">ДеньИд</string>
    <string name="time_end">ВремяОкончания</string>
    <string name="status">Статус</string>
    <string name="homework">ДомашнееЗадание</string>
    <string name="homework_single">Домашнее задание</string>
    <string name="pass">Пропуск</string>
    <string name="marks">Оценки</string>
    <string name="note">Замечание</string>
    <string name="theme">Тема</string>
    <string name="date">Дата</string>
    <string name="day_of_week">ДеньНедели</string>
    <string name="news">Новости</string>

    <string name="type">Тип</string>
    <string name="lessonId">УрокИд</string>
    <string name="mark">Оценка</string>
    <string name="period_id">ПериодИд</string>
    <string name="lessons">Уроки</string>
    <string name="lesson">Урок</string>
    <string name="text">Текст</string>

    <string name="missing">Отсутствует</string>

    <string name="text_copied">Текст скопирован в буфер</string>
    <string name="no_data">Нет данных</string>

    <string name="ill">по болезни</string>
    <string name="good_reason">по уважительной причине</string>
    <string name="bad_reason">по неуважительной причине</string>

    <string name="ill_short">б</string>
    <string name="good_reason_short">у</string>
    <string name="bad_reason_short">н</string>

    <string name="year">года</string>
    <string name="holidays">Каникулы</string>
    <string name="weekend">Выходной</string>
    <string name="day">День</string>

    <string-array name="days">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>

    <string-array name="periods_short">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>Г</item>
    </string-array>


    <string-array name="timetable_days">
        <item>Расписание на понедельник</item>
        <item>Расписание на вторник</item>
        <item>Расписание на среду</item>
        <item>Расписание на четверг</item>
        <item>Расписание на пятницу</item>
        <item>Расписание на субботу</item>
        <item>Расписание на воскресенье</item>
    </string-array>



    <string name="error_tracker_timeout_error">Превышено время ожидания данных. Сервер не отвечает</string>
    <string name="error_tracker_error">При получении данных произошла ошибка</string>
    <string name="error_tracker_empty_content">В JSON отсутствуют данные</string>
    <string name="error_tracker_empty_json">Получен пустой объект</string>
    <string name="error_tracker_exception_not_found">Не удалось получить текст ошибки</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_week_view">Календарь</string>

    <string name="action_back">Назад</string>
    <string name="action_next">Вперед</string>

    <string name="no_lessons_1">Сегодня занятий больше нет\nВсе ли задания выполнены?</string>
    <string name="no_lessons_2">Свободный день\nПроведите его весело!</string>
    <string name="no_lessons_3">Выходной\nУдачного дня!</string>

    <string name="internet_problem">Необходимо подключение к интернету</string>

    <string name="action_load">Загружаю данные… Подождите…</string>

    <string name="recent">Последние</string>
    <string name="progress">Итоговые оценки</string>

    <string name="next">Далее</string>

    <string name="first_period">I четверть</string>
    <string name="second_period">II четверть</string>
    <string name="third_period">III четверть</string>
    <string name="forth_period">IV четверть</string>
    <string name="all_period">Год</string>
    <string name="year_period">Итоговая</string>

    <string name="action_refresh">Обновить</string>
    <string name="action_change_view">Сменить отображение</string>
    <string name="favorites">Избранное</string>


    <string name="offline_mode">Авт. режим</string>

    <string name="exit">Выход</string>

    <string name="exit_question">Вы действительно хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="notification_alert">Разрешение на отправку уведомлений</string>
    <string name="notification_alert_text">Уведомления могут содержать напоминания, звуки и наклейки значков. Их конфигурирование возможно в Настройках</string>

    <string name="not_allow">Не разрешать</string>
    <string name="ok">ОК</string>

    <string name="user">Пользователь</string>
    <string name="notification">Уведомления</string>

    <string name="average_score">Средний балл</string>
    <string name="average">СреднийБалл</string>
    <string name="min_average">МинСреднийБалл</string>
    <string name="max_average">МаксСреднийБалл</string>

    <string name="statistics">Статистика</string>
    <string name="values">Значения</string>
    <string name="min_score">мин. по классу</string>
    <string name="score">учащегося</string>
    <string name="max_score">макс. по классу</string>
    <string name="notification_lesson_setting_text">О занятиях, за 5 минут до урока</string>
    <string name="notification_setting_text">О текущих и итоговых оценках, о новых сообщениях</string>
    <string name="collapse_key">collapse_key</string>
    <string name="message">message</string>
    <string name="choose_interlocutor">Выберите собеседника</string>
    <string name="cancel">Отмена</string>
    <string name="action_send">Отправить</string>
    <string name="write_message">Написать сообщение</string>

    <string name="message_text">ТекстСообщения</string>
    <string name="message_date">ДатаСообщения</string>
    <string name="messages">Сообщения</string>
    <string name="last_messages">ПоследниеСообщения</string>
    <string name="message_id">СообщениеИд</string>
    <string name="not_available_teachers">Нет доступных собеседников</string>


    <string-array name="months_short">
        <item>янв.</item>
        <item>фев.</item>
        <item>марта</item>
        <item>апр.</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>авг.</item>
        <item>сен.</item>
        <item>окт.</item>
        <item>дек.</item>
    </string-array>

    <string name="new_chat">Новый чат</string>
    <string name="search_title">Поиск</string>
    <string name="admin">Администратор</string>
</resources>
