<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_back" android:title="@string/action_back"
        android:icon="@mipmap/ic_keyboard_arrow_left_white_24dp"
        android:orderInCategory="1" app:showAsAction="always" />
    <item android:id="@+id/action_next" android:title="@string/action_next"
        android:icon="@mipmap/ic_keyboard_arrow_right_white_24dp"
        android:orderInCategory="1" app:showAsAction="always" />
    <item android:id="@+id/action_week_view" android:title="@string/action_week_view"
        android:icon="@mipmap/ic_today_white_24dp"
        android:orderInCategory="1" app:showAsAction="ifRoom" />
</menu>
