<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_back" android:title="@string/action_back"
        android:icon="@mipmap/ic_keyboard_arrow_left_white_24dp"
        android:orderInCategory="1" app:showAsAction="always" />
    <item android:id="@+id/action_next" android:title="@string/action_next"
        android:icon="@mipmap/ic_keyboard_arrow_right_white_24dp"
        android:orderInCategory="1" app:showAsAction="always" />
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@mipmap/ic_refresh_white_24dp"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
</menu>
