<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout android:id="@+id/login_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:id="@+id/user_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_user"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp"
                android:foregroundGravity="center"
                android:background="@mipmap/ic_account_box_black_24dp"
                android:contentDescription="@string/user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_name"
                android:text="@string/user"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="72dp"
                android:textSize="16sp"
                android:textColor="@android:color/primary_text_light"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="16dp"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user"
                android:textColor="@android:color/secondary_text_light"
                android:layout_marginLeft="72dp"
                android:textSize="14sp"
                android:paddingBottom="16dp"
                android:layout_below="@+id/user_name"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="16dp"
                android:layout_alignParentStart="true" />

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginLeft="72dp"
                android:background="@color/divider"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:id="@+id/class_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_class"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="16dp"
                android:foregroundGravity="center"
                android:background="@mipmap/ic_class_black_24dp"
                android:contentDescription="@string/time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/class_text_view"
                android:text="@string/class_text"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="72dp"
                android:textSize="16sp"
                android:layout_marginRight="16dp"
                android:textColor="@android:color/primary_text_light"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/class_text"
                android:textColor="@android:color/secondary_text_light"
                android:layout_marginLeft="72dp"
                android:textSize="14sp"
                android:layout_marginRight="16dp"
                android:paddingBottom="16dp"
                android:layout_below="@+id/class_text_view"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginLeft="72dp"
                android:background="@color/divider"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>